--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.22.5",
+    "antd": "^5.24.6",
     "axios": "^1.8.4",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-super-responsive-table": "^5.2.1",
     "reactstrap": "^9.1.3",
+    "source-map-loader": "^5.0.0",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
